frontend/test/should_fail/defYield_005ie.grg
using defYield;

test t
{
	-y:EE->;
	pp:p(x, y);
---
	def -x:EE->;
}

pattern p(-x:EE-> --- def -z:EE->)
{
	-y:EE->;
---
	yield { yield x = y; }
}

